refactor: remove built-in api key auth
